--- a/favorite-things.html
+++ b/favorite-things.html
@@ -10,17 +10,38 @@
     <h3>People</h3>
     <p>Here are some of my favorite people</p>
     <ul>
-      <li>My wife Carly</li>
+      <li>My wife <strong>Carly</strong>
+          <img src="carl.jpg" alt="A photo of Carl.">
+      </li>
+
       <li>My mom and dad:
         <ul>
-          <li>Sally</li>
-          <li>Bob</li>
+          <li>
+            <a href="http://www.poziksautoshop.com/bob.html">
+              <strong>Bob</strong>
+              <img src="img/bob.jpg" alt="A photo of Dad.">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.goodmom.com/sally.html">
+              <strong>Sally</strong>
+              <img src="img/sally.jpg" alt= "A photo of Sally.">
+            </a>  
+          </li>
         </ul>
       </li>
-      <li>My friend Jordan</li>
-      <li>My friend Jerry</li>
-      <li>My brother Steve</li>
-      <li>My brother Andrew</li>
+      <li>
+        <a href="http://www.willifordacing.com/jordan.html">
+          My friend <strong>Jordan</strong>
+          <img src="img/jordan.jpg" alt= "A photo of Jordo.">
+        </a>  
+      </li>
+      <li>
+        <a href="http://www.bestcheercoach.com/felicia.html">
+          My friend <strong>Felicia</strong>
+          <img src="img/flick.jpg" alt="A photo of Flick.">
+        </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
