--- a/favorite-things.html
+++ b/favorite-things.html
@@ -17,15 +17,13 @@
       <li>My mom and dad:
         <ul>
           <li>
-            <a href="http://www.poziksautoshop.com/bob.html">
               <strong>Bob</strong>
-              <img src="img/bob.jpg" alt="A photo of Dad.">
-            </a>
+               <img src="bob.jpg" alt="A photo of Dad.">
           </li>
           <li>
             <a href="http://www.goodmom.com/sally.html">
               <strong>Sally</strong>
-              <img src="img/sally.jpg" alt= "A photo of Sally.">
+              <img src="sally.jpg" alt= "A photo of Sally.">
             </a>  
           </li>
         </ul>
@@ -33,13 +31,13 @@
       <li>
         <a href="http://www.willifordacing.com/jordan.html">
           My friend <strong>Jordan</strong>
-          <img src="img/jordan.jpg" alt= "A photo of Jordo.">
+          <img src="jordan.jpg" alt= "A photo of Jordo.">
         </a>  
       </li>
       <li>
         <a href="http://www.bestcheercoach.com/felicia.html">
           My friend <strong>Felicia</strong>
-          <img src="img/flick.jpg" alt="A photo of Flick.">
+          <img src="flick.jpg" alt="A photo of Flick.">
         </a>
       </li>
     </ul>
